[package]
name = "jsonschema-rs-wasm"
version = "0.1.4"
authors = ["Lars Hvam"]
edition = "2018"
rust-version = "1.76"
homepage = "https://github.com/abap-wasm/jsonschema-rs-wasm"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
# see https://github.com/Stranger6667/jsonschema-rs/issues/222
jsonschema = { version = "=0.15.0", default-features = false, features = ["structopt"]}
serde_json = "1.0.114"
console_error_panic_hook = "0.1.7"